Mobile: correctly wrap text for posts and comments

--- a/style/main.scss
+++ b/style/main.scss
@@ -2647,6 +2647,9 @@
   .break-words {
     overflow-wrap: break-word;
   }
+  .wrap-anywhere {
+    overflow-wrap: anywhere;
+  }
   .whitespace-nowrap {
     white-space: nowrap;
   }
